add all required Unit Tests