@@ -78,17 +78,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- Flyway DB миграция Баз данных -->
-<!--c-->        <dependency><!--/c-->
-<!--c-->            <groupId>org.flywaydb</groupId><!--/c-->
-<!--c-->            <artifactId>flyway-core</artifactId><!--/c-->
-<!--c-->            <version>11.1.0</version><!--/c-->
-<!--c-->        </dependency><!--/c-->
-<!--c-->        <dependency><!--/c-->
-<!--c-->            <groupId>org.flywaydb</groupId><!--/c-->
-<!--c-->            <artifactId>flyway-database-postgresql</artifactId><!--/c-->
-<!--c-->            <version>11.1.0</version><!--/c-->
-<!--c-->        </dependency><!--/c-->
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
@@ -96,10 +85,36 @@
         </dependency>
         <!-- Flyway DB миграция Баз данных -->
 
+        <!-- ===== ТЕСТОВЫЕ ЗАВИСИМОСТИ ===== -->
+
+        <!-- JUnit 5 - убрать scope test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+
+        <!-- Mockito - убрать scope test -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.6.0</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+
     </dependencies>
 
     <build>
         <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -144,6 +159,19 @@
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
